[gd_scene load_steps=3 format=3 uid="uid://b41it63hevnve"]

[ext_resource type="Script" path="res://autoloads/SceneManager/SceneManager.gd" id="1_mgkds"]
[ext_resource type="FontFile" uid="uid://8qpbh3r20i6s" path="res://assets/fonts/Metropolis-Black.otf" id="3_cn7vu"]

[node name="SceneManager" type="Node"]
script = ExtResource("1_mgkds")

[node name="CurrentScene" type="Node" parent="."]
unique_name_in_owner = true

[node name="LoadingScreen" type="CanvasLayer" parent="."]
unique_name_in_owner = true
layer = 128
visible = false

[node name="ColorRect" type="ColorRect" parent="LoadingScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.118581, 0.118581, 0.118581, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="LoadingScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Header" type="Label" parent="LoadingScreen/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_cn7vu")
theme_override_font_sizes/font_size = 101
text = "LOADING . . ."
horizontal_alignment = 1

[node name="LoadingModal" type="CanvasLayer" parent="."]
unique_name_in_owner = true
layer = 127
visible = false

[node name="ColorRect" type="ColorRect" parent="LoadingModal"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -457.0
offset_top = -138.0
offset_right = -417.0
offset_bottom = -98.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(22.96, 6.81351)
color = Color(1, 1, 1, 0.584314)

[node name="VBoxContainer" type="VBoxContainer" parent="LoadingModal"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Header" type="Label" parent="LoadingModal/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.309385, 0.309385, 0.309385, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("3_cn7vu")
theme_override_font_sizes/font_size = 101
text = "Processing . . ."
horizontal_alignment = 1
